[tool.poetry]
name = "plopcast"
version = "0.1.0"
description = ""
authors = ["Rob Kirberich <robert@kirberich.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11"
requests = "^2.32.5"
pydantic = "^2.12.5"
pydantic-xml = "^2.18.0"
click = "^8.3.1"
typer = "^0.21.1"

[tool.poetry.scripts]
plopcast = "plopcast.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
